UPDATE: pom.xml, EmailService, QRCodeHandler, CustomerManagementController, OrderPaymentController